src/GachaMoon.WebApi/Deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gachamoon-webapi
  namespace: gachamoon
  labels:
    app.kubernetes.io/name: gachamoon-webapi
    app.kubernetes.io/part-of: gachamoon
    app.kubernetes.io/component: webapi
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app.kubernetes.io/name: gachamoon-webapi
    app.kubernetes.io/part-of: gachamoon
  type: ClusterIP
