src/GachaMoon.WebApi/Deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gachamoon-webapi-ingress
  namespace: gachamoon
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: api.gachamoon.ru
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gachamoon-webapi
            port:
              number: 80
